--- a/framework-4.1.4/public/assets/css/style.css
+++ b/framework-4.1.4/public/assets/css/style.css
@@ -3,6 +3,10 @@
     font-family: 'Comfortaa';
 }
 
+hr{
+    margin: 0 16px;
+}
+
 img {
     float: left;
     max-width: 100%;
@@ -16,7 +20,28 @@ img {
 
 .kotak{
     display: grid;
+    justify-content: space-evenly;
     grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+    padding:10px;
+}
+
+.kotak > div {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.kotak-3{
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: 33% auto auto auto;
+    grid-gap: 8px;
+    padding:8px;
+}
+
+.kotak-3 > div {
+    text-align: center;
+    padding: 20px 0;
 }
 
 .img-thumbnail {
@@ -33,12 +58,37 @@ img {
     box-shadow: 0.1rem 0.1rem 0.5rem 0.1rem rgba(105, 48, 48, 0.2) !important;
 }
 
+.main {
+    margin-top: 65px;
+}
+
+.container-isi{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.mt-2{
+    margin-top: 4rem;
+}
+
+.mx-1{
+    margin-inline: 1rem;
+}
+
+.p-2{
+    padding: 2rem;
+}
+
 /*ini bagian nav*/
+
 .topnav{
+    overflow: hidden;
     position: fixed;
     background-color: black;
     height: max-content;
     padding: 8px;
+    top: 0;
     width: 100%;
 }
 
@@ -62,8 +112,8 @@ img {
 
 /*ini bagian home*/
 .isi-home-1{
-    padding-top: 108px;
-    padding-bottom: 105px;
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 .text{
@@ -93,5 +143,61 @@ img {
 
 p{
     margin: 0 16px;
+}
+
+.text-isi{
     text-align: justify;
+}
+
+/*bagian list kamar*/
+.judul-listkamar{
+    padding-top: 2rem;
+}
+
+.isi-list{
+    border-radius: 25px;
+    background: white;
+    padding: 16px;
+    height: fit-content;
+    margin: 1rem 1rem 0 1rem;
+}
+
+.img-list{
+    width: 90%;
+    margin: 0 3.5%;
+}
+
+.text-list{
+    text-align: center;
+}
+
+.kotak-3{
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: 33% 33% 33%;
+    grid-gap: 8px;
+    padding: 16px;
+}
+
+.kotak-3 a{
+    text-decoration: none;
+    color: black;
+}
+
+.kotak-3 > div {
+    text-align: center;
+    padding: 16px 0;
+}
+
+.btn{
+    width: 60%;
+    padding: 16px 32px;
+    margin: 8px 8% 0;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    background-color: #41B3D3;
+}
+.btn:hover{
+    background-color: #4ed3f8;
 }
