--- a/framework-4.1.4/public/assets/style.css
+++ b/framework-4.1.4/public/assets/style.css
@@ -79,6 +79,10 @@ img {
 .p-2{
     padding: 2rem;
 }
+.pt-2{
+    padding-top: 2rem;
+}
+
 
 /*ini bagian nav*/
 
@@ -107,7 +111,7 @@ img {
 }
 
 .logo{
-    width: 7%;
+
 }
 
 /*ini bagian home*/
@@ -126,11 +130,11 @@ img {
     color: whitesmoke;
 }
 .bg-home {
-    background-image: url("hotel1.png");
+    background-image: url("img/hotel1.png");
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
 }
 
 .isi-home-2{
@@ -200,4 +204,9 @@ p{
 }
 .btn:hover{
     background-color: #4ed3f8;
+}
+
+/* ini buat login/register */
+.bg-login{
+    background-color: rgb(0, 0, 0, 0.3);
 }
