--- a/framework-4.1.4/public/assets/css/bootstrap-grid.css
+++ b/framework-4.1.4/public/assets/css/bootstrap-grid.css
@@ -49,7 +49,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(var(--bs-gutter-y) * -1);
-  margin-right: calc(var(--bs-gutter-x) * -.5);
+  /* margin-right: calc(var(--bs-gutter-x) * -.5); */
   margin-left: calc(var(--bs-gutter-x) * -.5);
 }
 .row > * {
