--- a/framework-4.1.4/public/assets/css/style.css
+++ b/framework-4.1.4/public/assets/css/style.css
@@ -76,9 +76,12 @@ img {
     margin-inline: 1rem;
 }
 
+
+
 .p-2{
     padding: 2rem;
 }
+
 .pt-2{
     padding-top: 2rem;
 }
@@ -130,7 +133,7 @@ img {
     color: whitesmoke;
 }
 .bg-home {
-    background-image: url("img/hotel1.png");
+    background-image: url("hotel1.png");
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
@@ -208,5 +211,43 @@ p{
 
 /* ini buat login/register */
 .bg-login{
-    background-color: rgb(0, 0, 0, 0.3);
+    background-image: url(bg-full.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+.kotak-login{
+    margin: 16% 3%;
+    width: 75%;
+    background: #404040;
+    border-radius: 16px;
+    padding: 32px 24px;
+    color: #fff;
+}
+
+a {
+    color: #FFD31A;
+}
+
+.btn-login{
+    background-color: #FFD31A;
+    padding: 8px;
+    border-radius: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-login:hover{
+    background-color: #ffe16b;
+}
+
+.btn-login:active {
+    background-color: #ffe16b;
+    /* box-shadow: 0 5px #fff; */
+    transform: translateY(3px);
+}
+
+.logo-login{
+    margin: 23% 25%;
 }
