--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,32 +18,6 @@ img {
     content: "";
 }
 
-.kotak{
-    display: grid;
-    justify-content: space-evenly;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
-    padding:10px;
-}
-
-.kotak > div {
-    text-align: center;
-    padding: 20px 0;
-}
-
-.kotak-3{
-    display: grid;
-    justify-content: space-evenly;
-    grid-template-columns: 33% auto auto auto;
-    grid-gap: 8px;
-    padding:8px;
-}
-
-.kotak-3 > div {
-    text-align: center;
-    padding: 20px 0;
-}
-
 .img-thumbnail {
     padding: 0.25rem;
     background-color: #fff;
@@ -54,36 +28,8 @@ img {
     margin-right: 16px;
 }
 
-.shadow {
-    box-shadow: 0.1rem 0.1rem 0.5rem 0.1rem rgba(105, 48, 48, 0.2) !important;
-}
-
 .main {
     margin-top: 65px;
-}
-
-.container-isi{
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.mt-2{
-    margin-top: 4rem;
-}
-
-.mx-1{
-    margin-inline: 1rem;
-}
-
-
-
-.p-2{
-    padding: 2rem;
-}
-
-.pt-2{
-    padding-top: 2rem;
 }
 
 
@@ -113,28 +59,19 @@ img {
     color: antiquewhite;
 }
 
-.logo{
-
-}
-
 /*ini bagian home*/
-.isi-home-1{
-    padding-top: 75px;
-    padding-bottom: 75px;
-}
-
 .text{
     margin: 4%;
-    padding: 15% 3%;
     word-spacing: 10px;
     letter-spacing: 1px;
     line-height: 1.5;
+    font-size:2vw;
     text-align: center;
     color: whitesmoke;
 }
 .bg-home {
     background-image: url("hotel1.png");
-    height: 100%; 
+    height: 100vh !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
@@ -152,9 +89,6 @@ p{
     margin: 0 16px;
 }
 
-.text-isi{
-    text-align: justify;
-}
 
 /*bagian list kamar*/
 .judul-listkamar{
@@ -162,11 +96,12 @@ p{
 }
 
 .isi-list{
-    border-radius: 25px;
+    border-radius: 24px;
     background: white;
     padding: 16px;
     height: fit-content;
-    margin: 1rem 1rem 0 1rem;
+    margin: 8px 8px;
+    align-content: center;
 }
 
 .img-list{
@@ -178,28 +113,8 @@ p{
     text-align: center;
 }
 
-.kotak-3{
-    display: grid;
-    justify-content: space-evenly;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 8px;
-    padding: 16px;
-}
-
-.kotak-3 a{
-    text-decoration: none;
-    color: black;
-}
-
-.kotak-3 > div {
-    text-align: center;
-    padding: 16px 0;
-}
-
 .btn{
-    width: 60%;
     padding: 16px 32px;
-    margin: 8px 8% 0;
     border-radius: 8px;
     border: none;
     cursor: pointer;
@@ -212,6 +127,7 @@ p{
 /* ini buat login/register */
 .bg-login{
     background-image: url(bg-full.png);
+    height: 100vh !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
@@ -226,8 +142,9 @@ p{
     color: #fff;
 }
 
-a {
+.kotak-login a {
     color: #FFD31A;
+    text-decoration: none;
 }
 
 .btn-login{
