--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -132,7 +132,14 @@ p{
     background-repeat: no-repeat;
     background-size:cover;
 }
-
+.kotak-profile{
+    margin: 16% 3%;
+    width: 80%;
+    background: #404040;
+    border-radius: 20px;
+    padding: 56px 64px;
+    color: #fff;
+}
 .kotak-login{
     margin: 16% 3%;
     width: 75%;
