--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,6 +32,28 @@ img {
     margin-top: 65px;
 }
 
+/* Ini Breadcrumbs */
+ul.breadcrumb {
+    padding: 16px 8px;
+    list-style: none;
+  }
+  ul.breadcrumb li {
+    display: inline;
+  }
+  ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: black;
+    content: ">\00a0";
+  }
+  ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+  }
+  ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
+  }
+
 
 /*ini bagian nav*/
 
@@ -194,3 +216,42 @@ p{
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
+
+/* buat tabel */
+#detail {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #detail td {
+    border: 1px solid rgb(141, 141, 141);
+    padding: 8px;
+  }
+  
+  
+  .table {
+      --bs-table-bg: transparent;
+      --bs-table-accent-bg: transparent;
+      --bs-table-striped-color: #212529;
+      --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+      --bs-table-active-color: #212529;
+      --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+      --bs-table-hover-color: #212529;
+      --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+      width: 100%;
+      margin-bottom: 1rem;
+      color: #212529;
+      vertical-align: top;
+    }
+  .table > :not(caption) > * > * {
+      padding: 0.5rem 0.5rem;
+      background-color: var(--bs-table-bg);
+      border-bottom-width: 1px;
+      box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+  }
+  
+  .table-striped > tbody > tr:nth-of-type(odd) {
+      --bs-table-accent-bg: var(--bs-table-striped-bg);
+      color: var(--bs-table-striped-color);
+  }
