--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -135,16 +135,50 @@ p{
     text-align: center;
 }
 
-.btn{
-    padding: 16px 32px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
+.btn-1{
     background-color: #41B3D3;
 }
-.btn:hover{
+.btn-1:hover{
     background-color: #4ed3f8;
 }
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  @media (prefers-reduced-motion: reduce) {
+    .btn {
+      transition: none;
+    }
+  }
+  .btn:hover {
+    color: #212529;
+  }
+
+  .btn-success {
+    color: #fff;
+    background-color: #198754;
+    border-color: #198754;
+  }
+  .btn-success:hover {
+    color: #fff;
+    background-color: #157347;
+    border-color: #146c43;
+  }
 
 /* ini buat login/register */
 .bg-login{
