--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -180,6 +180,17 @@ p{
     border-color: #146c43;
   }
 
+  .btn-danger {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+  }
+  .btn-danger:hover {
+    color: #fff;
+    background-color: #bb2d3b;
+    border-color: #b02a37;
+  }
+
 /* ini buat login/register */
 .bg-login{
     background-image: url(bg-full.png);
@@ -317,4 +328,23 @@ p{
 
 .alert-warning .alert-link {
     color: #523e02;
+}
+
+.alert-success {
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+  }
+
+.alert-success .alert-link {
+    color: #0c4128;
+  }
+
+.alert-danger {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+.alert-danger .alert-link {
+    color: #6a1a21;
 }
