--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -54,15 +54,6 @@
     width: device-width;
   }
   
-  figcaption,
-  footer,
-  header,
-  main,
-  nav,
-  section {
-    display: block;
-  }
-  
   body {
     font-family: Open Sans, sans-serif;
     font-size: 1rem;
@@ -72,16 +63,6 @@
     text-align: left;
     color: #525f7f;
     background-color: #f8f9fe;
-  }
-  
-  [tabindex='-1']:focus {
-    outline: 0 !important;
-  }
-  
-  hr {
-    overflow: visible;
-    box-sizing: content-box;
-    height: 0;
   }
   
   h1,
@@ -97,78 +78,10 @@
     margin-top: 0;
     margin-bottom: 1rem;
   }
-  
-  address {
-    font-style: normal;
-    line-height: inherit;
-    margin-bottom: 1rem;
-  }
-  
-  ul {
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-  
-  ul ul {
-    margin-bottom: 0;
-  }
-  
-  dfn {
-    font-style: italic;
-  }
-  
-  strong {
-    font-weight: bolder;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #5e72e4;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-  }
-  
-  a:hover {
-    text-decoration: none;
-    color: #233dd2;
-  }
-  
-  a:not([href]):not([tabindex]) {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  a:not([href]):not([tabindex]):hover,
-  a:not([href]):not([tabindex]):focus {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  a:not([href]):not([tabindex]):focus {
-    outline: 0;
-  }
-  
-  code {
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-    font-size: 1em;
-  }
-  
+
   img {
     vertical-align: middle;
     border-style: none;
-  }
-  
-  caption {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    caption-side: bottom;
-    text-align: left;
-    color: #8898aa;
-  }
-  
-  label {
-    display: inline-block;
-    margin-bottom: .5rem;
   }
   
   button {
@@ -230,22 +143,7 @@
     overflow: auto;
     resize: vertical;
   }
-  
-  legend {
-    font-size: 1.5rem;
-    line-height: inherit;
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: .5rem;
-    padding: 0;
-    white-space: normal;
-    color: inherit;
-  }
-  
-  progress {
-    vertical-align: baseline;
-  }
+
   
   [type='number']::-webkit-inner-spin-button,
   [type='number']::-webkit-outer-spin-button {
@@ -311,177 +209,6 @@
   h6,
   .h6 {
     font-size: .625rem;
-  }
-  
-  .display-2 {
-    font-size: 2.75rem;
-    font-weight: 600;
-    line-height: 1.5;
-  }
-  
-  hr {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border: 0;
-    border-top: 1px solid rgba(0, 0, 0, .1);
-  }
-  
-  code {
-    font-size: 87.5%;
-    word-break: break-word;
-    color: #f3a4b5;
-  }
-  
-  a>code {
-    color: inherit;
-  }
-  
-  .container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .container {
-      max-width: 720px;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .container {
-      max-width: 960px;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .container {
-      max-width: 1140px;
-    }
-  }
-  
-  .container-fluid {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  .row {
-    display: flex;
-    margin-right: -15px;
-    margin-left: -15px;
-    flex-wrap: wrap;
-  }
-  
-  .col-4,
-  .col-8,
-  .col,
-  .col-md-10,
-  .col-md-12,
-  .col-lg-3,
-  .col-lg-4,
-  .col-lg-6,
-  .col-lg-7,
-  .col-xl-4,
-  .col-xl-6,
-  .col-xl-8 {
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  .col {
-    max-width: 100%;
-    flex-basis: 0;
-    flex-grow: 1;
-  }
-  
-  .col-4 {
-    max-width: 33.33333%;
-    flex: 0 0 33.33333%;
-  }
-  
-  .col-8 {
-    max-width: 66.66667%;
-    flex: 0 0 66.66667%;
-  }
-  
-  @media (min-width: 768px) {
-  
-    .col-md-10 {
-      max-width: 83.33333%;
-      flex: 0 0 83.33333%;
-    }
-  
-    .col-md-12 {
-      max-width: 100%;
-      flex: 0 0 100%;
-    }
-  }
-  
-  @media (min-width: 992px) {
-  
-    .col-lg-3 {
-      max-width: 25%;
-      flex: 0 0 25%;
-    }
-  
-    .col-lg-4 {
-      max-width: 33.33333%;
-      flex: 0 0 33.33333%;
-    }
-  
-    .col-lg-6 {
-      max-width: 50%;
-      flex: 0 0 50%;
-    }
-  
-    .col-lg-7 {
-      max-width: 58.33333%;
-      flex: 0 0 58.33333%;
-    }
-  
-    .order-lg-2 {
-      order: 2;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-  
-    .col-xl-4 {
-      max-width: 33.33333%;
-      flex: 0 0 33.33333%;
-    }
-  
-    .col-xl-6 {
-      max-width: 50%;
-      flex: 0 0 50%;
-    }
-  
-    .col-xl-8 {
-      max-width: 66.66667%;
-      flex: 0 0 66.66667%;
-    }
-  
-    .order-xl-1 {
-      order: 1;
-    }
-  
-    .order-xl-2 {
-      order: 2;
-    }
   }
   
   .form-control {
@@ -738,96 +465,6 @@
     border-radius: .375rem;
   }
   
-  .dropdown {
-    position: relative;
-  }
-  
-  .dropdown-menu {
-    font-size: 1rem;
-    position: absolute;
-    z-index: 1000;
-    top: 100%;
-    left: 0;
-    display: none;
-    float: left;
-    min-width: 10rem;
-    margin: .125rem 0 0;
-    padding: .5rem 0;
-    list-style: none;
-    text-align: left;
-    color: #525f7f;
-    border: 0 solid rgba(0, 0, 0, .15);
-    border-radius: .4375rem;
-    background-color: #fff;
-    background-clip: padding-box;
-    box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
-  }
-  
-  .dropdown-menu.show {
-    display: block;
-    opacity: 1;
-  }
-  
-  .dropdown-menu-right {
-    right: 0;
-    left: auto;
-  }
-  
-  .dropdown-menu[x-placement^='top'],
-  .dropdown-menu[x-placement^='right'],
-  .dropdown-menu[x-placement^='bottom'],
-  .dropdown-menu[x-placement^='left'] {
-    right: auto;
-    bottom: auto;
-  }
-  
-  .dropdown-divider {
-    overflow: hidden;
-    height: 0;
-    margin: .5rem 0;
-    border-top: 1px solid #e9ecef;
-  }
-  
-  .dropdown-item {
-    font-weight: 400;
-    display: block;
-    clear: both;
-    width: 100%;
-    padding: .25rem 1.5rem;
-    text-align: inherit;
-    white-space: nowrap;
-    color: #212529;
-    border: 0;
-    background-color: transparent;
-  }
-  
-  .dropdown-item:hover,
-  .dropdown-item:focus {
-    text-decoration: none;
-    color: #16181b;
-    background-color: #f6f9fc;
-  }
-  
-  .dropdown-item:active {
-    text-decoration: none;
-    color: #fff;
-    background-color: #5e72e4;
-  }
-  
-  .dropdown-item:disabled {
-    color: #8898aa;
-    background-color: transparent;
-  }
-  
-  .dropdown-header {
-    font-size: .875rem;
-    display: block;
-    margin-bottom: 0;
-    padding: .5rem 1.5rem;
-    white-space: nowrap;
-    color: #8898aa;
-  }
-  
   .input-group {
     position: relative;
     display: flex;
@@ -916,104 +553,8 @@
     border-bottom-left-radius: 0;
   }
   
-  .nav {
-    display: flex;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
-    flex-wrap: wrap;
-  }
-  
-  .nav-link {
-    display: block;
-    padding: .25rem .75rem;
-  }
-  
-  .nav-link:hover,
-  .nav-link:focus {
-    text-decoration: none;
-  }
-  
-  .navbar {
-    position: fixed;
-    display: flex;
-    padding: 1rem 1rem;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .navbar>.container,
-  .navbar>.container-fluid {
-    display: fixed;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .navbar-nav {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
-  }
-  
-  .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-  }
-  
-  .navbar-nav .dropdown-menu {
-    position: fixed;
-    float: none;
-  }
-  
-  @media (max-width: 767.98px) {
-  
-    .navbar-expand-md>.container,
-    .navbar-expand-md>.container-fluid {
-      padding-right: 0;
-      padding-left: 0;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .navbar-expand-md {
-      flex-flow: row nowrap;
-      justify-content: flex-start;
-    }
-  
-    .navbar-expand-md .navbar-nav {
-      flex-direction: row;
-    }
-  
-    .navbar-expand-md .navbar-nav .dropdown-menu {
-      position: absolute;
-    }
-  
-    .navbar-expand-md .navbar-nav .nav-link {
-      padding-right: 1rem;
-      padding-left: 1rem;
-    }
-  
-    .navbar-expand-md>.container,
-    .navbar-expand-md>.container-fluid {
-      flex-wrap: nowrap;
-    }
-  }
-  
-  .navbar-dark .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, .95);
-  }
-  
-  .navbar-dark .navbar-nav .nav-link:hover,
-  .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, .65);
-  }
-  
   .card {
-    position: relative;
+    margin-top: 4rem;
     display: flex;
     flex-direction: column;
     min-width: 0;
@@ -1334,10 +875,6 @@
       text-decoration: underline;
     }
   
-    img {
-      page-break-inside: avoid;
-    }
-  
     p,
     h3 {
       orphans: 3;
@@ -1360,9 +897,7 @@
       min-width: 992px !important;
     }
   
-    .navbar {
-      display: none;
-    }
+
   }
   
   figcaption,
@@ -1531,61 +1066,13 @@
     border-width: 1px;
   }
   
-  .card-profile-image {
-    position: relative;
-  }
-  
   .card-profile-image img {
-    position: absolute;
-    left: 50%;
-    max-width: 180px;
-    transition: all .15s ease;
-    transform: translate(-50%, -30%);
-    border-radius: .375rem;
+    max-width: 120px;
+    margin: -50% -30%;
   }
   
   .card-profile-image img:hover {
-    transform: translate(-50%, -33%);
-  }
-  
-  .card-profile-stats {
-    padding: 1rem 0;
-  }
-  
-  .card-profile-stats>div {
-    margin-right: 1rem;
-    padding: .875rem;
-    text-align: center;
-  }
-  
-  .card-profile-stats>div:last-child {
-    margin-right: 0;
-  }
-  
-  .card-profile-stats>div .heading {
-    font-size: 1.1rem;
-    font-weight: bold;
-    display: block;
-  }
-  
-  .card-profile-stats>div .description {
-    font-size: .875rem;
-    color: #adb5bd;
-  }
-  
-  .main-content {
-    position: relative;
-  }
-  
-  .main-content .navbar-top {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-right: 0 !important;
-    padding-left: 0 !important;
-    background-color: transparent;
+    transform: translate(0,-15%);
   }
   
   @media (min-width: 768px) {
@@ -1593,64 +1080,6 @@
       padding-right: 39px !important;
       padding-left: 39px !important;
     }
-  }
-  
-  .dropdown {
-    display: inline-block;
-  }
-  
-  .dropdown-menu {
-    min-width: 12rem;
-  }
-  
-  .dropdown-menu .dropdown-item {
-    font-size: .875rem;
-    padding: .5rem 1rem;
-  }
-  
-  .dropdown-menu .dropdown-item>i {
-    font-size: 1rem;
-    margin-right: 1rem;
-    vertical-align: -17%;
-  }
-  
-  .dropdown-header {
-    font-size: .625rem;
-    font-weight: 700;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    text-transform: uppercase;
-    color: #f6f9fc;
-  }
-  
-  .dropdown-menu a.media>div:first-child {
-    line-height: 1;
-  }
-  
-  .dropdown-menu a.media p {
-    color: #8898aa;
-  }
-  
-  .dropdown-menu a.media:hover .heading,
-  .dropdown-menu a.media:hover p {
-    color: #172b4d !important;
-  }
-  
-  .footer {
-    padding: 2.5rem 0;
-    background: #f7fafc;
-  }
-  
-  .footer .nav .nav-item .nav-link {
-    color: #8898aa !important;
-  }
-  
-  .footer .nav .nav-item .nav-link:hover {
-    color: #525f7f !important;
-  }
-  
-  .footer .copyright {
-    font-size: .875rem;
   }
   
   .form-control-label {
@@ -1836,162 +1265,6 @@
     }
   }
   
-  .nav-link {
-    color: #525f7f;
-  }
-  
-  .nav-link:hover {
-    color: #5e72e4;
-  }
-  
-  .nav-link i.ni {
-    position: relative;
-    top: 2px;
-  }
-  
-  .navbar-search .input-group {
-    border: 2px solid;
-    border-radius: 2rem;
-    background-color: transparent;
-  }
-  
-  .navbar-search .input-group .input-group-text {
-    padding-left: 1rem;
-    background-color: transparent;
-  }
-  
-  .navbar-search .form-control {
-    width: 270px;
-    background-color: transparent;
-  }
-  
-  .navbar-search-dark .input-group {
-    border-color: rgba(255, 255, 255, .6);
-  }
-  
-  .navbar-search-dark .input-group-text {
-    color: rgba(255, 255, 255, .6);
-  }
-  
-  .navbar-search-dark .form-control {
-    color: rgba(255, 255, 255, .9);
-  }
-  
-  .navbar-search-dark .form-control:-ms-input-placeholder {
-    color: rgba(255, 255, 255, .6);
-  }
-  
-  .navbar-search-dark .form-control::-ms-input-placeholder {
-    color: rgba(255, 255, 255, .6);
-  }
-  
-  .navbar-search-dark .form-control::placeholder {
-    color: rgba(255, 255, 255, .6);
-  }
-  
-  .navbar-search-dark .focused .input-group {
-    border-color: rgba(255, 255, 255, .9);
-  }
-  
-  @media (min-width: 768px) {
-    .navbar .dropdown-menu {
-      margin: 0;
-      pointer-events: none;
-      opacity: 0;
-    }
-  
-    .navbar .dropdown-menu-arrow:before {
-      position: absolute;
-      z-index: -5;
-      bottom: 100%;
-      left: 20px;
-      display: block;
-      width: 12px;
-      height: 12px;
-      content: '';
-      transform: rotate(-45deg) translateY(12px);
-      border-radius: 2px;
-      background: #fff;
-      box-shadow: none;
-    }
-  
-    .navbar .dropdown-menu-right:before {
-      right: 20px;
-      left: auto;
-    }
-  
-    @keyframes show-navbar-dropdown {
-      0% {
-        transition: visibility .25s, opacity .25s, transform .25s;
-        transform: translate(0, 10px) perspective(200px) rotateX(-2deg);
-        opacity: 0;
-      }
-  
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-  
-    @keyframes hide-navbar-dropdown {
-      from {
-        opacity: 1;
-      }
-  
-      to {
-        transform: translate(0, 10px);
-        opacity: 0;
-      }
-    }
-  }
-  
-  @media (max-width: 767.98px) {
-    .navbar-nav .nav-link {
-      padding: .625rem 0;
-      color: #172b4d !important;
-    }
-  
-    .navbar-nav .dropdown-menu {
-      min-width: auto;
-      box-shadow: none;
-    }
-  }
-  
-  @keyframes show-navbar-collapse {
-    0% {
-      transform: scale(.95);
-      transform-origin: 100% 0;
-      opacity: 0;
-    }
-  
-    100% {
-      transform: scale(1);
-      opacity: 1;
-    }
-  }
-  
-  @keyframes hide-navbar-collapse {
-    from {
-      transform: scale(1);
-      transform-origin: 100% 0;
-      opacity: 1;
-    }
-  
-    to {
-      transform: scale(.95);
-      opacity: 0;
-    }
-  }
-  
-  .progress {
-    overflow: hidden;
-    height: 8px;
-    margin-bottom: 1rem;
-    border-radius: .25rem;
-    background-color: #e9ecef;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
-  }
-  
   p {
     font-size: 1rem;
     font-weight: 300;
@@ -2017,18 +1290,9 @@
     text-transform: uppercase;
   }
   
-  .display-2 span {
-    font-weight: 300;
-    display: block;
-  }
-  
   @media (max-width: 768px) {
     .btn {
       margin-bottom: 10px;
     }
-  }
-  
-  #navbar .navbar {
-    margin-bottom: 20px;
   }
   
